rajat_ahmedabad_assoc_consultant_provus_test

--- a/force-app/main/default/classes/QuoteDto.cls
+++ b/force-app/main/default/classes/QuoteDto.cls
@@ -1,5 +1,10 @@
 public with sharing class QuoteDto extends BaseDto {
-  public Date endDate;
+  @AuraEnabled
+  public Date startDate { get; set; }
+  @AuraEnabled
+  public Date endDate { get; set; }
+  @AuraEnabled
+  public String quoteName { get; set; }
 
   public QuoteDto() {
   }
@@ -7,6 +12,8 @@ public with sharing class QuoteDto extends BaseDto {
   public QuoteDto(Quote__c quote) {
     super(quote);
     this.endDate = quote.EndDate__c;
+    this.startDate = quote.StartDate__c;
+    this.quoteName = quote.Name;
   }
 
   public override SObject refreshSo() {
